service/k3s/templates/postgres-operator-helm.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-operator
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-proxy-headers: 'X-Forwarded-Proto: https'
    ingress.pomerium.io/allowed_domains: '["${zone}"]'
    ingress.pomerium.io/allowed_idp_claims: '{"groups":["${zone}"]}'
    ingress.pomerium.io/to: http://postgres-operator-ui.postgres-operator:80
    ingress.pomerium.io/tls_skip_verify: "true"
    ingress.pomerium.io/preserve_host_header: "true"
    ingress.pomerium.io/pass_identity_headers: "true"
    kubernetes.io/ingress.class: traefik-cert-manager
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: postgres-operator-ui
  namespace: kube-system
spec:
  tls:
    - hosts:
      - pg-ui.${domain}
      secretName: pg-ui-tls
  rules:
    - host: pg-ui.${domain}
      http:
        paths:
          - backend:
              serviceName: pomerium-proxy
              servicePort: 80
